# codex-with-gemini-integration

./: .gitignore  1.txt  HUNYUAN-README.md  HUNYUAN_API_COMPLETE_GUIDE.md  HUNYUAN_API_PARAMS.md  HUNYUAN_DEFAULT_SETTINGS.md  HUNYUAN_INTEGRATED_GUIDE.md  HUNYUAN_MCP_TEST_REPORT.md  HUNYUAN_OUTPUT_NAMING.md  HUNYUAN_PERFORMANCE_GUIDE.md  HUNYUAN_SETUP.md  HUNYUAN_USAGE_EXAMPLES.md  PNPM.md  README.md  custom_features_report.tex  justfile  run_codex_with_hunyuan.sh  test_mcp_init.json
.github/workflows/: ci.yml  codespell.yml  release-fork.yml  rust-ci.yml  rust-release.yml
codex-cli/: package.json
codex-cli/scripts/: build_npm_package.py
codex-rs/: .gitignore  Cargo.toml  RALPH_LOOP_COMPLETION_REPORT.md  RALPH_LOOP_FINAL_DESIGN.md  RALPH_LOOP_FINAL_REPORT.md  RALPH_LOOP_IMPLEMENTATION.md  RALPH_LOOP_QUICKSTART.md  README.md  dog.rs  justfile  plan.md
codex-rs/app-server/src/: bespoke_event_handling.rs  codex_message_processor.rs  lib.rs  ralph_loop_handler.rs  ralph_loop_utils.rs
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: main.rs
codex-rs/common/src/: config_summary.rs  model_presets.rs
codex-rs/core/: Cargo.toml  gemini_codex_prompt.md  gemini_germini_prompt.md  gemini_prompt.md  prompt.md
codex-rs/docs/: compact-rollback-issue.tex  gemini_3_pro_image_user_guide.aux  gemini_3_pro_image_user_guide.out  gemini_3_pro_image_user_guide.tex  gemini_3_pro_image_user_guide.toc  gemini_integration_report.tex
codex-rs/exec/: Cargo.toml
codex-rs/hunyuan-mcp-server/: AI_USAGE_INSTRUCTIONS.md  Cargo.toml  README.md  TECHNICAL_IMPLEMENTATION.md  config.example.toml  test_api.py
codex-rs/hunyuan-mcp-server/src/: image_utils.rs  lib.rs  main.rs  message_processor.rs  models.rs
codex-rs/hunyuan-mcp-server/src/tencent_cloud/: auth.rs  client.rs  mod.rs
codex-rs/hunyuan-mcp-server/src/tools/: download.rs  generate.rs  mod.rs  query.rs
codex-rs/multi-agent/: Cargo.toml
codex-rs/protocol/: Cargo.toml
codex-rs/tui/: Cargo.toml
codex-rs/tui2/: Cargo.toml
codex-rs/watermark-remover-mcp-server/: Cargo.toml  README.md
codex-rs/watermark-remover-mcp-server/src/: lib.rs  main.rs  message_processor.rs
codex-rs/watermark-remover-mcp-server/src/tools/: images_to_pdf.rs  mod.rs  pdf_to_images.rs  process_pdf.rs  remove_watermark.rs
docs/: config.md  example-config.md
scripts/: asciicheck.py  install-codex.ps1  install-codex.sh
(+527 files in other folders)
